infra-as-code/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azvaultwatch
  namespace: web-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azvaultwatch
  template:
    metadata:
      labels:
        app: azvaultwatch
        azure.workload.identity/use: "true" # workload identity
    spec:
      serviceAccountName: "sa-az-workload-identity" # workload identity
      containers:
        - name: my-container
          image: wxzd/azurevaultwatch:v1 # Replace with your app image
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
