infra-as-code/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azvaultwatch-service
  namespace: web-dev
spec:
  selector:
    app: azvaultwatch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
